Fix layout bug for license link in FullWidthCards #458880157866480

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -770,10 +770,24 @@ html.flexbox:not(.Explorer):not(.Safari) {
         background-color: #ffda7f;
     }
 
-    img {
-        border-radius: 50%;
-        box-shadow: 5px 5px 10px @gray-lighter;
+
+    .ImageContainer {
+        text-align: center;
+        img {
+            border-radius: 50%;
+            box-shadow: 5px 5px 10px @gray-lighter;
+        }
+
+        .LicenseInfo {
+            text-align: center;
+            color: @gray-light;
+
+            &:after {
+                content: "Lizenz";
+            }
+        }
     }
+
 
     .setTitle, .categoryTitle {
         margin-top: -10px;
